--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.14",
+    "aos": "^2.3.4",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.552.0",
     "react": "^18.3.1",
